sample/retrieveUnpackaged/objects/Track_Bill_View__c.object
<CustomObject>
    <description>This object is used to count the number of times a bill is viewed from ABNote over a period of time.</description>
    <fields>
        <fullName>Counter__c</fullName>
        <label>Counter</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Is_Portal__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Portal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Period__c</fullName>
        <label>Period</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Year__c</fullName>
        <label>Year</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <label>Track Bill View</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Is_Portal__c</columns>
        <columns>Year__c</columns>
        <columns>Period__c</columns>
        <columns>Counter__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Track Bill View</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Track Bill View</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>